--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
 	</dependencies>
 
 	<build>
+        <finalName>TurbulenceHub</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
