- created AnalyzeRunRequestDto to accept analyze parameters. - added timeOfRunPath in BasicRun to store the time part of output path. - created CompletedRunResponseDto to send the parameters of completed runs. - created CompletedRunResponseMapper to map runs to CompletedRunResponseDto. - in DashboardController added a path for /analyzeRun to analyze a run. - in the data controller added a /rbc path to fetch rbc data. - in HydroRunService and MhdRunService added findById to find run by id. - in LaunchRunWebSocketHandler added timeOfRunPath to send to createRun functions of Hydro and MHD. - modified createRun of HydroRunService and MhdRunService to add timeOfRunPath to run. - created entity, repository and service for RBC model. - in SimulationConfig added getAnalyzeScriptPath to get the path for run analysis script.

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>spring_example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring_example</name>
-	<description>Backend for www.vayusoftlabs.com</description>
+	<description>Backend for www.turbulencehub.in</description>
 	<url/>
 	<licenses>
 		<license/>
